src/objects/FPA_Approval__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Approver Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32760</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPA</label>
        <referenceTo>Factory_Pricing_Authorization__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>FPA_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFO</label>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>FPA_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>A__c</columns>
        <columns>B__c</columns>
        <columns>C__c</columns>
        <columns>D__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <recordTypes>
        <fullName>FPA_Approvers</fullName>
        <active>true</active>
        <label>Format Approvers</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>